--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,15 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="src/lib/postgresql-9.4.1208.jar"/>
 	<classpathentry kind="lib" path="src/lib/postgresql-9.4.1210.jar"/>
+	<classpathentry kind="lib" path="cglib-nodep-2.2.2.jar"/>
+	<classpathentry kind="lib" path="dbunit-2.5.3.jar"/>
+	<classpathentry kind="lib" path="hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="hamcrest-library-1.3.jar"/>
+	<classpathentry kind="lib" path="log4j.jar"/>
+	<classpathentry kind="lib" path="objenesis-2.1.jar"/>
+	<classpathentry kind="lib" path="postgresql-9.4.1210.jre6.jar"/>
+	<classpathentry kind="lib" path="slf4j-log4j12-1.7.14.jar"/>
+	<classpathentry kind="lib" path="slf4j.api-1.6.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
